--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include('partials/header') %>
+<main class="landing-page-text">
+    <p><br>People dream on average for over six years.</p>
+    <h1 id="landing-page-question">ARE YOU A DREAMER?</h1>
+    <div class="btn">
+        <a href="#">Get Started With Reverie</a>
+    </div>
+</main>
+
+<%- include('partials/footer') %>
