--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
     <p><br>People dream on average for over six years.</p>
     <h1 id="landing-page-question">ARE YOU A DREAMER?</h1>
     <div class="btn">
-        <a href="#">Get Started With Reverie</a>
+        <a href="/dreams/new">Get Started With Reverie</a>
     </div>
 </main>
 
