--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
         <link rel='stylesheet' href='/stylesheets/style.css' />
         <script defer src="/javascripts/jquery.min.js"></script>
         <script defer src="/javascripts/bootstrap.min.js"></script>
+    
     </head>
     <body>
       <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
@@ -17,7 +18,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                <a class="navbar-brand" href="#">REVERIE</a>
+                <a class="navbar-brand" href="/">REVERIE</a>
               </div>
   
               <div class="collapse navbar-collapse" id="navbar-collapse">
