--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,14 +1,58 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Armata', sans-serif;
 }
 
 a {
   color: #00B7FF;
 }
 
+.navbar{
+  font-family: 'Khand', sans-serif;
+}
 
-.landing-page-text {
-  padding-top: 80px;
+.landing-page{
   text-align: center;
+  color: white;
+}
+
+#tint {
+  padding: 0px;
+  margin: 0px;
+  z-index: 100;
+  height: 170vh;
+  width: 100vw;
+  background: rgba(8, 1, 46, 0.678); 
+  background-repeat: repeat;
+  position: absolute;
+}
+
+#landing-page-text {
+ margin: 40px;
+ margin-top: 140px;
+ padding: 5px;
+ border-radius: 5px;
+ font-size: 18px;
+ font-family: 'Armata', sans-serif;
+ z-index: 100;
+} 
+
+#landing-page-question{
+  font-size: 48px;
+  padding: 10px 0px;
+  margin-top: 10px;
+  font-weight: 900;
+}
+
+#my-video{
+  z-index: -100;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.7;
+} 
+
+.btn{
+ border-radius: 12px;
 }
