--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>REVERIE</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel='stylesheet' href='/stylesheets/style.css' />
-        <script defer src="/javascripts/jquery.min.js"></script>
-        <script defer src="/javascripts/bootstrap.min.js"></script>
-    
-    </head>
-    <body>
-      <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
-          <div class="container">
-              <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+
+<head>
+    <title>REVERIE</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://fonts.googleapis.com/css?family=Armata|Khand&display=swap" rel="stylesheet">
+    <script defer src="/javascripts/jquery.min.js"></script>
+    <script defer src="/javascripts/bootstrap.min.js"></script>
+    <link href="https://vjs.zencdn.net/7.5.4/video-js.css" rel="stylesheet">
+    <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+</head>
+
+<body>
+    <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 <a class="navbar-brand" href="/">REVERIE</a>
-              </div>
-  
-              <div class="collapse navbar-collapse" id="navbar-collapse">
-                  <ul class="nav navbar-nav navbar-right">
-                      <li><a href="/">Home</a></li>
-                      <li><a href="#about">About</a></li>
-                      <li>
+            </div>
+
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li>
                         <% if (user) { %>
-                            <a href="/logout"><i class="material-icons left"></i>Log Out</a>
+                        <a href="/logout"><i class="material-icons left"></i>Log Out</a>
                         <% } else { %>
-                            <a href="/auth/google"><i class="material-icons left"></i>Login with Google</a>
+                        <a href="/auth/google"><i class="material-icons left"></i>Login with Google</a>
                         <% } %>
-                        </li>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-        </nav>
-    
+                    </li>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
