--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,36 @@ a {
   color: #00B7FF;
 }
 
+#page-container{
+  min-height: 100%;
+}
+
+#quote{
+  color: white;
+  text-align: center;
+  padding: 40px 80px 40px 40px;
+  background-color: black;
+  z-index: 900;
+  width: 110vw;
+  margin-left: -40px;
+}
+
+#bottom-section{
+  margin-top: 680px;
+  margin-left: -50px;
+  padding-left: 50px;
+  padding-right: 140px;
+  position: absolute;
+  z-index: 4;
+  width: 110vw;
+  background-image: url('../images/topography.png');
+  border-top:gray 2px solid;
+}
+
+.subheading{
+  padding: 40px 140px 40px -60px;
+}
+
 .navbar{
   font-family: 'Khand', sans-serif;
 }
@@ -20,9 +50,10 @@ a {
 #tint {
   padding: 0px;
   margin: 0px;
-  z-index: 100;
-  height: 170vh;
-  width: 100vw;
+  margin-left: -60px;
+  z-index: 1;
+  height: 750px;
+  width: 110vw;
   background: rgba(8, 1, 46, 0.678); 
   background-repeat: repeat;
   position: absolute;
@@ -30,12 +61,13 @@ a {
 
 #landing-page-text {
  margin: 40px;
- margin-top: 140px;
+ margin-top: 180px;
  padding: 5px;
+ margin-left: 15px;
  border-radius: 5px;
  font-size: 18px;
  font-family: 'Armata', sans-serif;
- z-index: 100;
+ z-index: 5;
 } 
 
 #landing-page-question{
@@ -51,8 +83,25 @@ a {
   top: 0;
   left: 0;
   opacity: 0.7;
+  height: 800px;
 } 
+
 
 .btn{
  border-radius: 12px;
+ color: #fff;
+ border-width: 2px;
+}
+
+.btn-subheading{
+  margin: 20px;
+}
+
+.parallax {
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  width: 100%;
+  background-size: cover;
+  background-attachment: fixed;
 }
