--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,32 +14,33 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">REVERIE</a>
-            </div>
+    <main id="page-container">
+        <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/">REVERIE</a>
+                </div>
 
-            <div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li>
-                        <% if (user) { %>
-                        <a href="/logout"><i class="material-icons left"></i>Log Out</a>
-                        <% } else { %>
-                        <a href="/auth/google"><i class="material-icons left"></i>Login with Google</a>
-                        <% } %>
-                    </li>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse" id="navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/#about">About</a></li>
+                        <li>
+                            <% if (user) { %>
+                            <a href="/logout"><i class="material-icons left"></i>Log Out</a>
+                            <% } else { %>
+                            <a href="/auth/google"><i class="material-icons left"></i>Login with Google</a>
+                            <% } %>
+                        </li>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
