Add dream cards

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,8 @@
       <% if (user) { %>
       <a href="/dreams/" class="btn btn-primary btn-large">Unlock your dreams</a>
       <% } else { %>
-      <a href="/dreams/new" class="btn btn-primary btn-large">Get Started With Reverie</a>
+      <a href="/dreams/new" class="btn btn-primary btn-large">Get Started With Reverie</a> 
+      <a href="/auth/google" class="btn btn-primary btn-large">Login</a> 
       <% } %>
     </div>
   </div>
@@ -36,7 +37,8 @@
       Dreams not only replay memory fragments but also create brand-new, highly creative mixtures of memories and
       knowledge.
       <br><br>
-      REVERIE leverages the Sentiment API, developed by Andrew Sliwinski at the MIT Media Lab, a Node.js module that uses the AFINN-165 wordlist and Emoji Sentiment Ranking
+      REVERIE leverages the Sentiment API, developed by Andrew Sliwinski at the MIT Media Lab, a Node.js module that
+      uses the AFINN-165 wordlist and Emoji Sentiment Ranking
       to perform sentiment analysis.
       <br><br>
       We want to help you track, analyze, and unlock your dreams so you can produce humanity's next great creation.
@@ -54,4 +56,5 @@
 
 </main>
 </body>
+
 </html>
