--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,5 @@
 </main>
-
-
+<footer>"A dream you dream alone is only a dream. A dream you dream together is reality." ― John Lennon
 </footer>
 </body>
 
