--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,9 +34,9 @@
                         <li><a href="/#about">About</a></li>
                         <li>
                             <% if (user) { %>
-                            <a href="/logout"><i class="material-icons left"></i>Log Out</a>
+                            <a href="/logout">Log Out</a>
                             <% } else { %>
-                            <a href="/auth/google"><i class="material-icons left"></i>Login with Google</a>
+                            <a href="/auth/google">Login with Google</a>
                             <% } %>
                         </li>
                         </li>
