--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,8 @@
 body {
-  padding: 50px;
+  padding: 50px 50px 0px 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   font-family: 'Armata', sans-serif;
+  background-color: #f5f5f5;
 }
 
 a {
@@ -9,17 +10,17 @@ a {
 }
 
 #page-container{
-  min-height: 100%;
+  min-height: calc(100vh - 160px);
 }
 
 #quote{
   color: white;
   text-align: center;
   padding: 40px 80px 40px 40px;
-  background-color: black;
+  background-color: rgb(11, 0, 19);
   z-index: 900;
   width: 110vw;
-  margin-left: -40px;
+  margin-left: -50px;
 }
 
 #bottom-section{
@@ -91,17 +92,109 @@ a {
  border-radius: 12px;
  color: #fff;
  border-width: 2px;
+ margin: 10px;
 }
 
 .btn-subheading{
   margin: 20px;
 }
 
+.btn-new{
+  /* border-radius: 50%; */
+}
+
 .parallax {
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: 100%;
-  width: 100%;
+  width: 100vw;
   background-size: cover;
   background-attachment: fixed;
+}
+
+footer { 
+  margin-top: 40px;
+  padding: 20px;
+  bottom: 0;
+  position: relative;
+  color: white;
+  background-color:rgb(11, 0, 19);
+  width: 100vw;
+  margin-left: -50px;
+  text-align: center;
+}
+
+#details{
+  background-color: #fff;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+}
+
+.title-left {
+  font-size: 2rem;
+  position: relative;
+}
+
+
+.progress {
+  background-color: #cde1f8;
+  margin: .5rem 6rem 1.2rem 0;
+}
+
+
+.dream-box {
+  margin-bottom: 3rem;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  background-color: #fff;
+  text-align: center;
+  border-radius: 10px;
+  margin-right: 20px;
+}
+
+.dream-box:hover img {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+img {
+  overflow: hidden;
+  transition: all 1s;
+  padding: 30px;
+  width: 80%;
+  max-height: 30vh;
+  max-width: 40vw;
+  border-radius: 40px;
+}
+
+#center{
+  text-align: center;
+}
+
+.dream-details {
+  padding: 20px;
+}
+
+.dream-more-details {
+  color: #4e4e4e;
+  font-size: 16px;
+}
+
+
+#all-dream-boxes{
+  margin: 0px;
+}
+
+
+.line {
+  width: 80px;
+  height: 5px;
+  background-color: #0078ff;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+
+.col-sm-8{
+  width: 100%;
+  text-align: center;
 }
