--- a/views/dreams/new.ejs
+++ b/views/dreams/new.ejs
@@ -1,11 +1,12 @@
 <%- include('../partials/header') %>
 
 <h1>Enter your dream details</h1>
+ <div class="line"></div>
 <form action="/dreams" method="POST">
 
   <div class="form-group">
     <label for="example-datetime-local-input">When did you have this dream?</label>
-    <input name="date" class="form-control" type="date" placeholder="MM/DD/YYY" value="2011-08-19T13:45:00">
+    <input name="date" class="form-control" type="date" >
   </div>
 
   <div class="form-group">
