--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,8 +99,18 @@ a {
   margin: 20px;
 }
 
-.btn-new{
-  /* border-radius: 50%; */
+#btn-login{
+  color: #fff;
+  border-width: 2px;
+  background-color:  none;
+  border-color:  #fff;
+}
+
+#btn-login:hover{
+  color:rgb(11, 0, 19);
+  border-width: 2px;
+  background-color:  white;
+  border-color: rgb(11, 0, 19);
 }
 
 .parallax {
@@ -153,6 +163,7 @@ footer {
   text-align: center;
   border-radius: 10px;
   margin-right: 20px;
+
 }
 
 .dream-box:hover img {
@@ -246,4 +257,9 @@ time.icon * {
 
 .key-words {
   font-size: 14px;
+}
+
+
+#return-btn{
+text-align: center;
 }
