--- a/views/dreams/edit.ejs
+++ b/views/dreams/edit.ejs
@@ -1,11 +1,41 @@
 <%- include('../partials/header') %>
 
-<h1>Edit page</h1>
 
-<form action="/dreams/<%= dream._id%>?_method=PUT" method="POST" autocomplete="off">
-  
+<h1 id="center">Edit your dream details</h1>
+<div class="line"></div>
+<%= dream.hoursSlept %>
 
-    <input type="submit">
+<form action="/dreams/<%= dream._id %>?_method=PUT" method="POST" autocomplete="off">
+
+  <div class="form-group">
+    <label for="example-datetime-local-input">When did you have this dream?</label>
+    <input name="date" class="form-control" type="date" value="<%= dream.date %>" >
+  </div>
+
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">What do you remember about it?</label>
+    <textarea name="description" minlength="20" class="form-control" id="exampleFormControlTextarea1" rows="4">
+
+    </textarea>
+  </div>
+
+  <div class="form-group">
+    <label>How many total hours did you sleep?</label>
+    <input class="form-control" name="hoursSlept" type="number" step="0.25" value="<%= dream.hoursSlept %>" id="example-number-input">
+  </div>
+
+
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Who was in your dream?</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>Pet</option>
+      <option>Father</option>
+      <option>Mother</option>
+    </select>
+  </div>
+
+
+    <input type="submit" value="Update dream">
 </form>
 
 
