--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,18 +2,20 @@
 <html>
 
 <head>
-    <title>REVERIE</title>
+    <title>REVERIE </title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css'>
     <link href="https://fonts.googleapis.com/css?family=Armata|Khand&display=swap" rel="stylesheet">
     <script defer src="/javascripts/jquery.min.js"></script>
     <script defer src="/javascripts/bootstrap.min.js"></script>
     <link href="https://vjs.zencdn.net/7.5.4/video-js.css" rel="stylesheet">
-    <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+    <script defer src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
 </head>
 
 <body>
+
     <main id="page-container">
         <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
             <div class="container">
@@ -25,7 +27,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">REVERIE</a>
+                    <a class="navbar-brand" href="/">REVERIE </a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="navbar-collapse">
