Add path to background video

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,7 +62,7 @@
   <section id="home">
     <video id='my-video' class='video-js' loop controls muted="muted" autoplay poster='MY_VIDEO_POSTER.jpg'
       data-setup='{}'>
-      <source src='/videos/nebula.mp4' type='video/mp4'>
+      <source src='/videos/nebula-video.mp4' type='video/mp4'>
       <p class='vjs-no-js'>
         To view this video please enable JavaScript, and consider upgrading to a web browser that
         <a href='https://videojs.com/html5-video-support/' target='_blank'>supports HTML5 video</a>
