--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,12 @@
 :root {
   --dark-purple: #08012E;
   --pale-blue: #BFD7EA;
-  --blackish-purple: #0B0013;  
+  --blackish-purple: #0B0013;
+  --medium-purple: #210154;
   --dim-gray: #69626D; 
   --platinum-gray: #E7E7E7;
   --bright-purple:  #7213c0;
+  --bright-blue:  #29669b;
 }
 
 body {
@@ -16,6 +18,15 @@ body {
 
 a {
   color: var(--bright-purple);
+}
+
+
+h5{
+  font-size: 16px;
+}
+
+.btn-primary   {
+  background-color: var(--bright-blue);
 }
 
 #page-container{
@@ -53,10 +64,6 @@ a {
 .navbar{
   font-family: 'Khand', sans-serif;
 }
-/* 
-.btn{
-  background-color: var(--pale-blue);
-} */
 
 .navbar-index{
   font-family: 'Khand', sans-serif;
@@ -72,6 +79,18 @@ a {
 .landing-page{
   text-align: center;
   color: white;
+}
+
+#btn-landing{
+  background-color:var(--medium-purple);
+  border: var(--medium-purple);
+  color: white;
+  margin-left: 0px;
+}
+
+
+#btn-edit{
+  background-color:var(--platinum-gray);
 }
 
 #tint {
@@ -98,7 +117,7 @@ a {
 } 
 
 #landing-page-question{
-  font-size: 48px;
+  font-size: 52px;
   padding: 10px 0px;
   margin-top: 10px;
   font-weight: 900;
@@ -340,4 +359,9 @@ text-align: center;
  #delete-form{
   text-align: right;
   padding: 8px 8px 0px 0px;
+}
+
+
+#first-dream{
+  margin-right: 50vw;
 }
