--- a/views/dreams/edit.ejs
+++ b/views/dreams/edit.ejs
@@ -1,40 +1,31 @@
 <%- include('../partials/header') %>
 
-
-<h1 id="center">Edit your dream details</h1>
+<h1 id="center">Edit this dream</h1>
 <div class="line"></div>
+  
+
 
 <form action="/dreams/<%= dream._id %>?_method=PUT" method="POST" autocomplete="off">
 
+  
+
   <div class="form-group">
-    <label for="example-datetime-local-input">When did you have this dream?</label>
-    <input name="date" class="form-control" type="date" value="<%= dream.date %>" >
+    <label for="example-datetime-local-input">When were you sleeping?</label>
+    <input name="date" class="form-control" type="date" value="<%= dream.date.getFullYear() %>-0<%=  dream.date.getMonth() + 1 %>-<%= (dream.date).toString().slice(8, 10) %>"> 
   </div>
+
+  <div class="form-group">
+      <label>How many total hours did you sleep?</label>
+      <input class="form-control" name="hoursSlept" type="number" step="0.25" value="<%= dream.hoursSlept %>" id="example-number-input">
+    </div>
 
   <div class="form-group">
     <label for="exampleFormControlTextarea1">What do you remember about it?</label>
-    <textarea name="description" minlength="20" class="form-control" id="exampleFormControlTextarea1" rows="4">
-
+    <textarea name="description" minlength="20" class="form-control" id="exampleFormControlTextarea1" required rows="4">
+<%= dream.description %>
     </textarea>
   </div>
-
-  <div class="form-group">
-    <label>How many total hours did you sleep?</label>
-    <input class="form-control" name="hoursSlept" type="number" step="0.25" value="<%= dream.hoursSlept %>" id="example-number-input">
-  </div>
-
-
-  <div class="form-group">
-    <label for="exampleFormControlSelect1">Who was in your dream?</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-      <option>Pet</option>
-      <option>Father</option>
-      <option>Mother</option>
-    </select>
-  </div>
-
-
-    <input type="submit" value="Update dream">
+    <input id="btn-edit" type="submit" value="Update dream">
 </form>
 
 
