--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css'>
+    <link href="/images/sleeping-in-bed-icon.png" rel="shortcut icon" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Armata|Khand&display=swap" rel="stylesheet">
     <script defer src="/javascripts/jquery.min.js"></script>
     <script defer src="/javascripts/bootstrap.min.js"></script>
@@ -60,7 +61,7 @@
     </div>
   </div>
   <section id="home">
-    <video id='my-video' class='video-js' loop controls muted="muted" autoplay poster='MY_VIDEO_POSTER.jpg'
+    <video id='my-video' class='video-js' loop controls muted="muted" autoplay poster='/images/nebula-img.png'
       data-setup='{}'>
       <source src='/videos/nebula-video.mp4' type='video/mp4'>
       <p class='vjs-no-js'>
@@ -77,23 +78,23 @@
     <h2><br> Our brain is an incredibly creative problem solver. </h2>
     <br>
     <h5>
-      Sleep is where some of humanity’s most incredible creations got their start: Electricity, Frankenstein’s monster,
+      Sleep is where some of humanity’s most incredible creations got their start. Electricity, Frankenstein’s monster,
       nonviolent resistance, laser technology were just a few of the ideas conceived in
       dreams.<br><br>The sleeping brain is freed of constraints and can thus create whole sequences of free
       associations.
       Dreams not only replay memory fragments but also create brand-new, highly creative mixtures of memories and
       knowledge.
       <br><br>
-      REVERIE leverages the Sentiment API, developed by Andrew Sliwinski at the MIT Media Lab, a Node.js module that
+      Reverie leverages the Sentiment API, developed by Andrew Sliwinski at the MIT Media Lab, a Node.js module that
       uses the AFINN-165 wordlist and Emoji Sentiment Ranking
       to perform sentiment analysis.
       <br><br>
       We want to help you track, analyze, and unlock your dreams so you can produce humanity's next great creation.
       <br><br>
       <% if (user) { %>
-      <a href="/dreams/" class="btn btn-primary btn-subheading">View your dream log ☁ 🌙</a>
+      <a href="/dreams/" id="btn-landing" class="btn btn-primary btn-subheading">View your dream log ☁ 🌙</a>
       <% } else { %>
-      <a href="/dreams/new" class="btn btn-primary btn-subheading">Log your first dream ☁ 🌙</a>
+      <a href="/dreams/new" id="btn-landing" class="btn btn-primary btn-subheading">Log your first dream ☁ 🌙</a>
       <% } %>
     </h5>
     
