--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css'>
+    <link href="/images/sleeping-in-bed-icon.png" rel="shortcut icon" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Armata|Khand&display=swap" rel="stylesheet">
     <script defer src="/javascripts/jquery.min.js"></script>
     <script defer src="/javascripts/bootstrap.min.js"></script>
     <link href="https://vjs.zencdn.net/7.5.4/video-js.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script defer src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
 </head>
 
