--- a/views/dreams/edit.ejs
+++ b/views/dreams/edit.ejs
@@ -1,32 +1,26 @@
 <%- include('../partials/header') %>
-
 <h1 id="center">Edit this dream</h1>
 <div class="line"></div>
-  
-
 
 <form action="/dreams/<%= dream._id %>?_method=PUT" method="POST" autocomplete="off">
-
-  
-
   <div class="form-group">
-    <label for="example-datetime-local-input">When were you sleeping?</label>
-    <input name="date" class="form-control" type="date" value="<%= dream.date.getFullYear() %>-0<%=  dream.date.getMonth() + 1 %>-<%= (dream.date).toString().slice(8, 10) %>"> 
+    <label for="example-datetime-local-input">When did you fall asleep?</label>
+    <input name="date" class="form-control" type="date"
+      value="<%= dream.date.getFullYear() %>-0<%=  dream.date.getMonth() + 1 %>-<%= (dream.date).toString().slice(8, 10) %>">
   </div>
-
   <div class="form-group">
-      <label>How many total hours did you sleep?</label>
-      <input class="form-control" name="hoursSlept" type="number" step="0.25" value="<%= dream.hoursSlept %>" id="example-number-input">
-    </div>
-
+    <label>How many total hours did you sleep?</label>
+    <input class="form-control" name="hoursSlept" min="0.25" max="24" type="number" step="0.25" value="<%= dream.hoursSlept %>"
+      id="example-number-input">
+  </div>
   <div class="form-group">
-    <label for="exampleFormControlTextarea1">What do you remember about it?</label>
-    <textarea name="description" minlength="20" class="form-control" id="exampleFormControlTextarea1" required rows="4">
+    <label for="exampleFormControlTextarea1">What do you remember about the dream?</label>
+    <textarea name="description" required minlength="20" class="form-control" id="exampleFormControlTextarea1" required
+      rows="4">
 <%= dream.description %>
     </textarea>
   </div>
-    <input id="btn-edit" type="submit" value="Update dream">
+  <input type="submit" class="btn btn-primary" value="Update">
 </form>
-
 
 <%- include('../partials/footer') %>
