--- a/views/dreams/new.ejs
+++ b/views/dreams/new.ejs
@@ -20,7 +20,7 @@
 
   <div class="form-group">
     <label>How many total hours did you sleep?</label>
-    <input class="form-control" name="hoursSlept" type="number" step="0.25" placeholder="8" id="example-number-input">
+    <input class="form-control" name="hoursSlept" type="number" step="0.25" placeholder="8" id="example-number-input"  min="0.25" max="24">
   </div>
 
   <button type="submit" class="btn btn-primary mb-2">Log dream</button>
