--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,7 +78,7 @@
     <h2><br> Our brain is an incredibly creative problem solver. </h2>
     <br>
     <h5>
-      Sleep is where some of humanity’s most incredible creations got their start. Electricity, Frankenstein’s monster,
+      Sleep is where some of humanity’s most incredible creations got their start. Google, Electricity, Frankenstein’s monster,
       nonviolent resistance, laser technology were just a few of the ideas conceived in
       dreams.<br><br>The sleeping brain is freed of constraints and can thus create whole sequences of free
       associations.
