--- a/views/dreams/new.ejs
+++ b/views/dreams/new.ejs
@@ -10,7 +10,7 @@
 <% } %>
   <div class="form-group">
     <label for="example-datetime-local-input">When did you have this dream?</label>
-    <input name="date" class="form-control" type="date">
+    <input name="date" class="form-control" type="datetime-local">
   </div>
 
   <div class="form-group">
